--- a/practicas/forms/calculadora.html
+++ b/practicas/forms/calculadora.html
@@ -42,6 +42,12 @@
     
         </form>
     </div>
+    <table style=" border: 1px solid black; border-collapse: collapse;">
+        <td>
+            <tr>Binario</tr>
+            <tr>$binario</tr>
+        </td>
+    </table>
     
 </body>
 
