--- a/WebPedidos/pruebas.html
+++ b/WebPedidos/pruebas.html
@@ -6,31 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   
-    <table style='border: 1px solid black;'>
-        <thead style='border: 1px solid black;'>
-            <th style='border: 1px solid black;' >cat1</th>
-            <th>cat1</th>
-            <th>cat1</th>
-            <th>cat1</th>
-        </thead>
-        <tbody>
-           <tr>
-            <td>hola</td>
-            <td>hola</td>
-
-            <td>hola</td>
-
-           </tr>
-           <tr>
-            <td>hola</td>
-            <td>caracola</td>
-
-            <td>hola</td>
-
-           </tr>
-           <td>caracola</td>
-        </tbody>
-    </table>
+    <h1>CARLOS MAQUEDA
+    </h1>
+    Servidor Apache
 </body>
 </html>
